update Nuclei with RunningPanel