@@ -2,7 +2,7 @@ package com.g3g4x5x6.ui.embed.nuclei.panel;
 
 import com.alibaba.fastjson.JSONObject;
 import com.formdev.flatlaf.extras.FlatSVGIcon;
-import com.g3g4x5x6.utils.DialogUtil;
+import com.g3g4x5x6.ui.embed.nuclei.NucleiFrame;
 import lombok.extern.slf4j.Slf4j;
 import org.yaml.snakeyaml.Yaml;
 
@@ -10,8 +10,6 @@ import javax.swing.*;
 import javax.swing.table.DefaultTableCellRenderer;
 import javax.swing.table.DefaultTableModel;
 import javax.swing.table.TableRowSorter;
-import javax.swing.tree.DefaultMutableTreeNode;
-import javax.swing.tree.TreePath;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.KeyEvent;
@@ -23,6 +21,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
+import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.Map;
 
@@ -32,18 +31,9 @@ public class TemplatesPanel extends JPanel {
     private JToolBar toolBar = new JToolBar();
     private JButton newBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/addFile.svg"));
     private JButton openBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/menu-open.svg"));
-    private JButton saveAllBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/menu-saveall.svg"));
-    private JButton closeBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/ignore_file.svg"));
-    private JButton closeAllBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/ignore_file.svg"));
-    private JButton cutBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/menu-cut.svg"));
-    private JButton copyBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/copy.svg"));
-    private JButton pasteBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/menu-paste.svg"));
-    private JButton undoBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/undo.svg"));
-    private JButton redoBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/redo.svg"));
     private JButton searchBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/replace.svg"));
-    private JToggleButton lineWrapBtn = new JToggleButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/toggleSoftWrap.svg"));
-    private JButton terminalBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/changeView.svg"));
     private JButton severityBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/sortBySeverity.svg"));
+    private JButton refreshBtn = new JButton(new FlatSVGIcon("com/g3g4x5x6/ui/icons/refresh.svg"));
     private JTextField searchField = new JTextField();
 
     private JScrollPane tableScroll;
@@ -59,7 +49,7 @@ public class TemplatesPanel extends JPanel {
     private JCheckBox highBox = new JCheckBox("High");
     private JCheckBox criticalBox = new JCheckBox("Critical");
 
-    private final LinkedList<String> templatesList = new LinkedList<>();
+    private LinkedList<LinkedHashMap<String, String>> templates = new LinkedList<>();
 
     public TemplatesPanel() {
         this.setLayout(new BorderLayout());
@@ -67,22 +57,10 @@ public class TemplatesPanel extends JPanel {
         toolBar.setFloatable(false);
         toolBar.add(newBtn);
         toolBar.add(openBtn);
-        toolBar.add(saveAllBtn);
-        toolBar.add(closeBtn);
-        toolBar.add(closeAllBtn);
-        toolBar.addSeparator();
-        toolBar.add(cutBtn);
-        toolBar.add(copyBtn);
-        toolBar.add(pasteBtn);
-        toolBar.addSeparator();
-        toolBar.add(undoBtn);
-        toolBar.add(redoBtn);
-        toolBar.addSeparator();
-        toolBar.add(lineWrapBtn);
         toolBar.addSeparator();
         toolBar.add(severityBtn);
         toolBar.addSeparator();
-        toolBar.add(terminalBtn);
+        toolBar.add(refreshBtn);
         toolBar.addSeparator();
         toolBar.add(Box.createGlue());
         toolBar.add(searchField);
@@ -120,7 +98,7 @@ public class TemplatesPanel extends JPanel {
                 "templates_reference"};
         tableModel.setColumnIdentifiers(columnNames);
         templatesTable.setModel(tableModel);
-        initDataForTable();
+        refreshDataForTable();
         tableScroll = new JScrollPane(templatesTable);
         tableScroll.setHorizontalScrollBarPolicy(JScrollPane.HORIZONTAL_SCROLLBAR_ALWAYS);
         tableScroll.setVerticalScrollBarPolicy(JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED);
@@ -141,10 +119,6 @@ public class TemplatesPanel extends JPanel {
             public void mouseClicked(MouseEvent e) {
             }
         });
-
-        // 搜索功能
-        sorter = new TableRowSorter<DefaultTableModel>(tableModel);
-        templatesTable.setRowSorter(sorter);
 
         this.add(toolBar, BorderLayout.NORTH);
         this.add(tableScroll, BorderLayout.CENTER);
@@ -176,10 +150,19 @@ public class TemplatesPanel extends JPanel {
                 severityPopupMenu.show(e.getComponent(), e.getX(), e.getY());
             }
         });
-        terminalBtn.addActionListener(new AbstractAction() {
+        refreshBtn.addActionListener(new AbstractAction() {
             @Override
             public void actionPerformed(ActionEvent e) {
-                // TODO 跳转至运行面板：RunningPanel
+                new Thread(()->{
+                    // nuclei -ut  [-ut, -update-templates         update nuclei-templates to latest released version]
+
+                    // 清除旧列表
+                    templates.clear();
+                    log.debug("Templates Count: " + templates.size());
+                    // 展示列表内信息
+                    refreshDataForTable();
+                    log.debug("Templates Count: " + templates.size());
+                }).start();
             }
         });
 
@@ -202,30 +185,59 @@ public class TemplatesPanel extends JPanel {
     /**
      * 耗时操作
      */
-    private void initDataForTable() {
+    private void refreshDataForTable() {
+        // 搜索功能
+        sorter = new TableRowSorter<DefaultTableModel>(tableModel);
+        templatesTable.setRowSorter(sorter);
         new Thread(() -> {
+            tableModel.setRowCount(0);
             try {
                 // 初始化列表并输出列表大小
-                log.debug("Templates Count: " + getAllTemplatesFromPath(defaultNucleiTemplatesPath));
+                log.debug("Templates Count: " + getAllTemplatesFromPath());
             } catch (IOException e) {
                 e.printStackTrace();
             }
             int count = 0;
-            for (String path : templatesList) {
-                Map template = getMapFromYaml(path);
-                JSONObject jsonObject = new JSONObject(template);
-                JSONObject info = jsonObject.getJSONObject("info");
-                String id = jsonObject.getString("id");
-                String name = info.getString("name");
-                String severity = info.getString("severity");
-                String author = info.getString("author");
-                String description = info.getString("description");
-                String reference = info.getString("reference");
-                String tags = info.getString("tags");
+            for (LinkedHashMap<String, String> templateInfo : templates) {
                 count++;
+                String id = templateInfo.get("id");
+                String name = templateInfo.get("name");
+                String severity = templateInfo.get("severity");
+                String author = templateInfo.get("author");
+                String description = templateInfo.get("description");
+                String reference = templateInfo.get("reference");
+                String tags = templateInfo.get("tags");
                 tableModel.addRow(new String[]{String.valueOf(count), id, name, severity, tags, author, description, reference});
             }
         }).start();
+    }
+
+    private LinkedHashMap<String, String> getTemplate(String path) {
+        LinkedHashMap<String, String> templateInfo = new LinkedHashMap<>();
+        Map map = getMapFromYaml(path);
+        if (map != null){
+            JSONObject jsonObject = new JSONObject(map);
+            JSONObject info = jsonObject.getJSONObject("info");
+
+            templateInfo.put("path", path);
+            templateInfo.put("id", jsonObject.getString("id")==null?"空":jsonObject.getString("id"));
+            templateInfo.put("name", info.getString("name"));
+            templateInfo.put("severity", info.getString("severity"));
+            templateInfo.put("author", info.getString("author"));
+            templateInfo.put("description", info.getString("description"));
+            templateInfo.put("reference", info.getString("reference"));
+            templateInfo.put("tags", info.getString("tags"));
+        }else{
+            templateInfo.put("path", path);
+            templateInfo.put("id", "空");
+            templateInfo.put("name", "空");
+            templateInfo.put("severity", "空");
+            templateInfo.put("author", "空");
+            templateInfo.put("description", "空");
+            templateInfo.put("reference", "空");
+            templateInfo.put("tags", "空");
+        }
+        return templateInfo;
     }
 
     private Map getMapFromYaml(String path) {
@@ -245,18 +257,18 @@ public class TemplatesPanel extends JPanel {
     /**
      * 遍历出目录下的所有 yaml 文件
      *
-     * @param rootPath 遍历目录
      * @return 匹配到的文件总数
      * @throws IOException 抛出异常
      */
-    private int getAllTemplatesFromPath(String rootPath) throws IOException {
-        if (Files.exists(Path.of(rootPath))) {
-            Files.walkFileTree(Paths.get(rootPath), new SimpleFileVisitor<>() {
+    private int getAllTemplatesFromPath() throws IOException {
+        if (Files.exists(Path.of(TemplatesPanel.defaultNucleiTemplatesPath))) {
+            Files.walkFileTree(Paths.get(TemplatesPanel.defaultNucleiTemplatesPath), new SimpleFileVisitor<>() {
                 // 访问文件时触发
                 @Override
                 public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
                     if (file.toString().endsWith(".yaml")) {
-                        templatesList.add(file.toString());
+//                        templatesList.add(file.toString());
+                        templates.add(getTemplate(file.toString()));
                     }
                     return FileVisitResult.CONTINUE;
                 }
@@ -267,7 +279,31 @@ public class TemplatesPanel extends JPanel {
                     return FileVisitResult.CONTINUE;
                 }
             });
-            return templatesList.size();
+            return templates.size();
+        }
+        return 0;
+    }
+
+    private int getTemplatesFromPath(String rootPath) throws IOException {
+        if (Files.exists(Path.of(rootPath))) {
+            Files.walkFileTree(Paths.get(rootPath), new SimpleFileVisitor<>() {
+                // 访问文件时触发
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
+                    if (file.toString().endsWith(".yaml")) {
+//                        templatesList.add(file.toString());
+                        templates.add(getTemplate(file.toString()));
+                    }
+                    return FileVisitResult.CONTINUE;
+                }
+
+                // 访问目录时触发
+                @Override
+                public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
+                    return FileVisitResult.CONTINUE;
+                }
+            });
+            return templates.size();
         }
         return 0;
     }
@@ -276,6 +312,15 @@ public class TemplatesPanel extends JPanel {
         @Override
         public void actionPerformed(ActionEvent e) {
             log.debug("Edit This Template");
+            for (int index : templatesTable.getSelectedRows()) {
+                int num = Integer.parseInt(templatesTable.getValueAt(index, 0).toString()) - 1;
+                String savePath = templates.get(num).get("path");
+                log.debug(savePath);
+                EditPanel editPanel = new EditPanel(savePath);
+                NucleiFrame.tabbedPane.addTab(editPanel.getTitle(), editPanel.getIcon(), editPanel);
+                NucleiFrame.tabbedPane.setSelectedIndex(NucleiFrame.tabbedPane.getTabCount() - 1);
+                log.debug(templates.get(num).toString());
+            }
         }
     };
 
